Got tablet pretty much working just need to fix the teddy-bryan problem with the font changing on mobile

--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -4,13 +4,37 @@
 .footer {
     background-color: $black;
 
+    @include tablet {
+        position: relative;
+    }
+
+    &__section-header-icons {
+        @include tablet {
+            flex-direction: row;
+            align-items: center;
+            gap: 3rem;
+        }
+    }
+
     &__points-of-contact {
         gap: 1rem 0rem;
         padding: 1rem 0rem;
+
+        @include tablet {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            gap: 2rem;
+        }
     }
 
     &__poc {
         gap: 1rem 0rem;
+
+        @include tablet {
+            gap: 2.5rem;
+            flex-shrink: 0;
+        }
     }
 
     &__section-header {
@@ -22,9 +46,22 @@
         }
     }
 
+
+
+
+
+
     &__icons {
-        width: 2rem;
-        height: 1rem;
+        justify-content: space-between;
+        flex-direction: row;
+        width: 50%;
+        height: 1.7rem;
+        display: flex;
+
+        @include tablet {
+            width: fit-content;
+            gap: 3rem;
+        }
     }
 
     &__poc {
@@ -32,7 +69,7 @@
         color: $white;
 
         @include tablet {
-            font-size: 1.4rem;
+            font-size: 1rem;
         }
 
         &-name-company-container {
@@ -40,20 +77,22 @@
         }
     }
 
-    &__icons {
-        justify-content: space-between;
-        flex-direction: row;
-        width: 50%;
-        height: 1.5rem;
-        display: flex;
-    }
-
     &__copyright {
         margin-top: 2.2rem;
         gap: 0.5rem 0rem;
+        // position: relative;
+
         &-title {
             @include mobile-page-header;
             color: $white;
+
+            @include tablet {
+                position: absolute;
+                top: 60px;
+                right: 48px;
+                font-size: 2rem;
+
+            }
         }
 
         &-text {
@@ -62,7 +101,7 @@
             font-size: 0.7rem;
 
             @include tablet {
-                font-size: 1.4rem;
+                font-size: 1rem;
             }
         }
     }
