--- a/styles/partials/_navbar.scss
+++ b/styles/partials/_navbar.scss
@@ -61,7 +61,7 @@
 
         @include tablet {
             font-size: 1.6rem;
-            padding: 1.69rem 0rem;
+            padding: 2rem 0rem;
         }
 
         &:hover {
