--- a/styles/partials/_page-formatting.scss
+++ b/styles/partials/_page-formatting.scss
@@ -10,7 +10,7 @@ section {
     padding: 1rem;
 
     @include tablet {
-        padding: 5rem;
+        padding: 3rem;
     }
 
 }
